# english_word_test

./: .env  .env.sample  .gitignore  Cargo.toml  Document.md  README.md
database/: init.sql
design/: promp_stitch.md
front/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
front/src/: App.tsx  index.css  main.tsx
front/src/components/: Button.tsx  Header.css  Header.tsx
front/src/pages/: MainPage.css  MainPage.tsx  OutputPage.tsx
front/src/style/: Button.css  MainPage.css  OutputPage.css
src/: main.rs
src/application/: utils.rs
src/domain/: model.rs
src/infra/: db.rs  mod.rs  pdf.rs
src/presentation/: handler.rs
