[package]
name = "english_word_test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
base64 = "0.22.1"
chrono = "0.4.41"
dotenv = "0.15.0"
genpdf = "0.2.0"
hyper = "1.6.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }

