[package]
name = "english_word_test"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
axum = "0.8.4"
hyper = "1.6.0"
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
sqlx = { version = "0.8.5", features = ["mysql", "runtime-tokio"] }
chrono = "0.4.41"
base64 = "0.22.1"
genpdf = "0.2.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
validator = { version = "0.20.0", features = ["derive"] }
axum-valid = "0.23.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
